--- a/starter/starter/config.yaml
+++ b/starter/starter/config.yaml
@@ -1,5 +1,6 @@
 main:
+  data_pth: ../data/census.csv
   model_pth: ../model/trained_model.pkl
 model:
-  label: label
+  label: salary
   test_size: 0.2
