feat: Add remote repo & dvc pull

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,6 +29,20 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest pandas
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-west-2
+    - uses: actions/checkout@v2
+    - name: Set-up DVC
+      uses: iterative/setup-dvc@v1
+    - name: Pull data
+      run: |
+        dvc remote add -d -f s3remote s3://udacity-mlops4-project
+        dvc pull
+    - uses: actions/checkout@v2
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
