--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -34,6 +34,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.aws_access_key_id }}
         aws-secret-access-key: ${{ secrets.aws_secret_access_key }}
+        aws-session-token: ${{ secrets.aws_session_token }}
         aws-region: us-west-2
     - uses: actions/checkout@v2
     - name: Set-up DVC
